deploy/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tom-frontend
  namespace: tom

  labels:
    app: tom-frontend

spec:
  replicas: 1

  strategy:
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"

  selector:
    matchLabels:
      app: tom-frontend

  template:
    metadata:
      labels:
        app: tom-frontend

    spec:
      serviceAccountName: tom-frontend

      containers:
        - name: tom-frontend
          image: quay.io/jberchez-redhat/tom-frontend:v1.1
          ports:
            - name: http
              containerPort: 8080

          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3

          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
  
          startupProbe:
            httpGet:
              path: /startup
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
