deploy/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tom-frontend
  namespace: tom

  labels:
    app: tom-frontend

spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http

  selector:
    app: tom-frontend
