deploy/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  labels:
    app: tom-frontend
  name: tom-frontend
  namespace: tom

spec:
  port:
    targetPort: http

  tls:
    termination: edge
    
  to:
    kind: Service
    name: tom-frontend
    weight: 100

  wildcardPolicy: None
